--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
 
 <script src="./js/script.js"></script>
 <script src="./js/test.js"></script>
+<script src="./js/modul2.js" >  </script>
 </body>
 </html>
 
