--- a/index.html
+++ b/index.html
@@ -11,111 +11,9 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Titan+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.min.css">
-</head>
+
 <body >
-    <header>
-        
-    </header>
-<main>
-    <section products-section >
-        <div class="content-container">
-            <div class="tittle-wraper">
-                <p class="text">100% natural</p>
-                <h2 class="tittle">products</h2>
-            </div>
-            <ul class="product-cards-list">
-            <li class="product-card product-card--ice-cream">
-                <h3 class="product-card__title">Ice Cream</h3>
-                <div class="product-card__description">
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et
-                    </p>
-                    <p
-                        class="product-card__description--extra product-card__description--hidden"
-                        products-desc-ice-cream
-                    >
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et
-                    </p>
-                </div>
-                <button
-                    class="product-card__button product-card__button--ice-cream"
-                ></button>
-            </li>
-            <li class="product-card product-card--ice-coffee">
-                <h3 class="product-card__title">Ice Coffee</h3>
-                <div class="product-card__description">
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et
-                    </p>
-                    <p
-                        class="product-card__description--extra product-card__description--hidden"
-                        products-desc-ice-coffee
-                    >
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et
-                    </p>
-                </div>
-                <button
-                    class="product-card__button product-card__button--ice-coffee"
-                ></button>
-            </li>
-            <li class="product-card product-card--milk-shake">
-                <h3 class="product-card__title">Milk Shake</h3>
-                <div class="product-card__description">
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et
-                    </p>
-                    <p
-                        class="product-card__description--extra product-card__description--hidden"
-                        products-desc-milk-shake
-                    >
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et
-                    </p>
-                </div>
-                <button
-                    class="product-card__button product-card__button--milk-shake"
-                ></button>
-            </li>
-        </ul>
-        </div>
-    </section>
-</main>
-<footer class="footer">
-    <div class="content-container footer__container">
-        <div class="footer__vrapper">
-            <div class="footer__thumb-left">
-                <p class="footer__text">homemade ice cream made </p>
-                <p class="footer__title-text">with passion</p>
-            </div>
-            <div class="footer__thumb-right">
-                <ul class="footer__list-social">
-                    <li class="footer__social"><a href="https://github.com/" class="social__item"  target="_blank" rel="nofollow, noopener, noreferrer" > <svg class="social__icon"> <use href=./images/symbol-defs.svg#icon-github ></use> </svg></a></li>
-                    <li class="footer__social"><a href="https://web.telegram.org/k/" class="social__item" target="_blank" rel="nofollow, noopener, noreferrer" >  <svg class="social__icon"> <use href=./images/symbol-defs.svg#icon-telegram ></use> </svg></a></li>
-                    <li class="footer__social"><a href="https://m.facebook.com/" class="social__item" target="_blank" rel="nofollow, noopener, noreferrer" > <svg class="social__icon"> <use href=./images/symbol-defs.svg#icon-facebook ></use> </svg></a></li>
-                </ul>
-                <div class="footer__contact_wrapper">
-                    <p class="footer__coctact-text">Feel free to contact</p>
-                    <a class="footer__contact"  href=" +61 (0) 383 766 284">  +61 (0) 383 766 284</a>
-                </div>
-            </div>
-    </div>
-    
-    <p  class="footer__copyright" > &copy; 2019 - IceCream. All Rights Reserved.  </p>
-</footer>
-    </div>
-
-
-    </main>
-
-<script src="./js/script.js"></script>
-<script src="./js/test.js"></script>
-<script src="./js/modul2.js" ></script>
-<script src="./js/modul3.js" ></script>
+<h1 class="test">test</h1>
 </body>
 </html>
 
