--- a/index.html
+++ b/index.html
@@ -13,8 +13,33 @@
     <link rel="stylesheet" href="./css/main.min.css">
 
 <body >
+
+<div class="container">
+  <ul class="usernames">
+    <li>Mango</li>
+  </ul>
+</div>
+
+
+
+<button type="button" class="js-target-btn">Целевая кнопка</button>
+<button type="button" class="js-add-listened">Добавить слушатель</button>
+<button type="button" class="js-remove-listener">Снять Слушатель</button>
+
 <h1 class="test">test</h1>
+
+<button class="js-clear">Очистить</button>
+<p class="output js-output"></p>
+
+
+
+
+<script src="./js/modul1.js" type="module" ></script>
+<script src="./js/modul2.js" type="module"></script>
+<script src="./js/test.js" type="module"></script>
+
 </body>
 </html>
+
 
 
