--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Titan+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.min.css">
 
+
+<ul id="ingredients"></ul>
+
+
 <body >
 
 <div class="container">
@@ -32,6 +36,20 @@
 <p class="output js-output"></p>
 
 
+
+<label>
+  имя
+  <input type="text" class="js-input">
+</label>
+<p>
+  <label>
+    <input type="checkbox" class="js-license">
+  </label>
+</p>
+
+<button type="submit" disabled class="js-button">
+  зарегестрироватса как <span>Аноним</span>
+</button>
 
 
 <script src="./js/modul1.js" type="module" ></script>
