--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@
 <link href="https://fonts.googleapis.com/css2?family=Titan+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.min.css">
 
+<body > 
 
-<ul id="ingredients"></ul>
 
 
-<body >
 
-<div class="container">
-  <ul class="usernames">
-    <li>Mango</li>
-  </ul>
-</div>
+</ul> class="tags js-tags">
+  <li class="tags__item"><button class="tags__btn" data-value="html"> #html</button></li>
+  <li class="tags__item"><button class="tags__btn" data-value="css" > </button>#css</li>
+  <li class="tags__item"><button class="tags__btn" data-value="java" > </button> #java</li>
+  <li class="tags__item"><button class="tags__btn" data-value="react" > </button>#react</li>
+  <li class="tags__item"><button class="tags__btn" data-value="c++" > </button>#c++</li>
+  
+</ul>
 
 
 
@@ -35,23 +37,21 @@
 <button class="js-clear">Очистить</button>
 <p class="output js-output"></p>
 
+<!-- Тест -->
 
 
-<label>
-  имя
-  <input type="text" class="js-input">
-</label>
-<p>
-  <label>
-    <input type="checkbox" class="js-license">
-  </label>
-</p>
-
-<button type="submit" disabled class="js-button">
-  зарегестрироватса как <span>Аноним</span>
-</button>
 
 
+
+
+
+<script
+      async
+      src=https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js
+      integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
 <script src="./js/modul1.js" type="module" ></script>
 <script src="./js/modul2.js" type="module"></script>
 <script src="./js/test.js" type="module"></script>
